--- a/envs/Dockerfile
+++ b/envs/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/telechong/flashgames:0.0.1
+FROM cassidylaidlaw/flashgames:0.0.1
 COPY ./flashgames.CoastRunners-v0 /app/universe-envs/flashgames/build/git-lfs/flashgames.CoastRunners-v0
 COPY ./flashgames.CoastRunners-v0/private/vexpect/vexpect.yml /app/universe-envs/flashgames/build/private/flashgames.CoastRunners-v0/vexpect/vexpect.yml
 WORKDIR /app/universe-envs/flashgames/build/git-lfs/
